@@ -16,6 +16,8 @@ PLUGN_ELEMENT_HEADING="Element"
 PLUGN_FOLDER_HEADING="Type"
 PLUGN_NAME_HEADING="Plug-in Name"
 
+PLUGN_XML_DESC="Description"
+PLUGN_XML_ERR="Plugins XML data not available"
 PLUGN_FIELD_NAME_DESC="Plug-in Name Desc"
 PLUGN_FIELD_NAME_LABEL="Plug-in Name"
 PLUGN_FIELD_ELEMENT_DESC="Field Element Desc"
